fix broken test

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,9 @@
 		<script id="booking-template" type="text/x-jquery-tmpl">
 			<a href="#" data-id="${id}">${name}</a> for &euro; <em>${price}</em>
 		</script>
+		<script id="cart-item-template" type="text/x-jquery-tmpl">
+			<li>${name}</li>
+		</script>
 
     </head>
     <body>
